# japanopens_2008_obake

Obake/: .conf  Makefile  (+10 more)
Obake/src/: .conf  Makefile.  Makefile.am  Makefile.in  bhv_basic_move.cpp  bhv_basic_move.h  bhv_basic_offensive_kick.cpp  bhv_basic_offensive_kick.h  bhv_basic_tackle.cpp  bhv_basic_tackle.h  bhv_go_to_static_ball.cpp  bhv_goalie_basic_move.cpp  bhv_goalie_basic_move.h  bhv_goalie_chase_ball.cpp  bhv_goalie_chase_ball.h  bhv_goalie_free_kick.cpp  bhv_obake_action_strategy.cpp  bhv_obake_action_strategy.h  bhv_obake_action_strategy_test.cpp  bhv_obake_action_strategy_test.h  bhv_obake_defend.cpp  bhv_obake_defend.h  bhv_obake_dribble.cpp  bhv_obake_dribble.h  bhv_obake_dribble_strategy.cpp  bhv_obake_dribble_strategy.h  bhv_obake_mark.cpp  bhv_obake_mark.h  bhv_obake_pass.cpp  bhv_obake_pass.h  bhv_obake_receive.cpp  bhv_obake_receive.h  bhv_obake_receive_test.cpp  bhv_obake_receive_test.h  bhv_penalty_kick.cpp  bhv_penalty_kick.h  bhv_pre_process.cpp  bhv_pre_process.h  bhv_prepare_set_play_kick.cpp  bhv_set_play.cpp  (+56 more)
Obake/src/formations-bpn/CVS/: Entries  Repository
Obake/src/formations-dt/: 4-2-3-1-offense-formation.conf  before-kick-off.conf  defense-formation.conf  kickin-our-formation.conf  normal-formation.conf  offense-formation.conf  setplay-our-formation.conf
Obake/src/formations-dt/CVS/: Entries  Repository
Obake/src/formations-uva/: offense-formation.conf
rcsc/: Makefile.am  Makefile.in  game_mode.h  game_time.h  geom.h  gz.h  math_util.h  random.h  rcg.h  soccer_math.h  timer.h  types.h
rcsc/action/: Makefile.am  Makefile.in  arm_off.h  arm_point_to_point.h  basic_actions.cpp  basic_actions.h  bhv_before_kick_off.cpp  bhv_before_kick_off.h  bhv_body_neck_to_ball.h  bhv_body_neck_to_point.h  bhv_emergency.cpp  bhv_emergency.h  bhv_go_to_point_look_ball.cpp  bhv_go_to_point_look_ball.h  bhv_neck_body_to_ball.h  bhv_neck_body_to_point.h  bhv_scan_field.cpp  bhv_scan_field.h  body_advance_ball.cpp  body_advance_ball.h  body_clear_ball.cpp  body_clear_ball.h  body_dribble.h  body_dribble2006.cpp  body_dribble2006.h  body_dribble2007.cpp  body_dribble2007.h  body_go_to_point.cpp  body_go_to_point.h  body_go_to_point_dodge.cpp  body_go_to_point_dodge.h  body_hold_ball.cpp  body_hold_ball.h  body_intercept.cpp  body_intercept.h  body_kick_collide_with_ball.cpp  body_kick_collide_with_ball.h  body_kick_multi_step.cpp  body_kick_multi_step.h  body_kick_one_step.cpp  (+46 more)
rcsc/ann/: Makefile.am  Makefile.in  bpn1.h  ngnet.cpp  ngnet.h  rbf.cpp  rbf.h
rcsc/coach/: Makefile.am  Makefile.in  coach_agent.cpp  coach_agent.h  coach_audio_sensor.cpp  coach_audio_sensor.h  coach_command.cpp  coach_command.h  coach_config.cpp  coach_config.h  global_object.cpp  global_object.h  global_visual_sensor.cpp  global_visual_sensor.h  global_world_model.cpp  global_world_model.h  player_type_analyzer.cpp  player_type_analyzer.h
rcsc/common/: Makefile.am  Makefile.in  audio_codec.cpp  audio_codec.h  audio_memory.cpp  audio_memory.h  audio_message.h  basic_client.cpp  basic_client.h  free_message_parser.h  logger.cpp  logger.h  player_param.cpp  player_param.h  player_type.cpp  player_type.h  say_message_parser.cpp  say_message_parser.h  server_param.cpp  server_param.h  soccer_agent.cpp  soccer_agent.h  team_graphic.cpp  team_graphic.h
rcsc/formation/: Makefile.am  Makefile.in  formation.cpp  formation.h  formation_bpn.cpp  formation_bpn.h  formation_dt.cpp  formation_dt.h  formation_factory.cpp  formation_factory.h  formation_knn.cpp  formation_knn.h  formation_ngnet.cpp  formation_ngnet.h  formation_rbf.cpp  formation_rbf.h  formation_sbsp.cpp  formation_sbsp.h  formation_static.cpp  formation_static.h  formation_uva.cpp  formation_uva.h
rcsc/geom/: Makefile.am  Makefile.in  angle_deg.cpp  angle_deg.h  circle_2d.cpp  circle_2d.h  delaunay_triangulation.cpp  delaunay_triangulation.h  line_2d.cpp  line_2d.h  matrix_2d.cpp  matrix_2d.h  matrix_2d_test.cpp  polygon_2d.cpp  polygon_2d_test.cpp  ray_2d.cpp  ray_2d.h  rect_2d.cpp  rect_2d.h  sector_2d.cpp  sector_2d.h  segment_2d.h  segment_2d_test.cpp  triangle_2d.cpp  triangle_2d.h  triangle_2d_test.cpp  vector_2d.cpp  vector_2d.h
rcsc/gz/: Makefile.am  Makefile.in  gzcompressor.cpp  gzcompressor.h  gzfilterstream.cpp  gzfilterstream.h
rcsc/monitor/: Makefile.am  Makefile.in  monitor_command.cpp  monitor_command.h
rcsc/net/: Makefile.am  Makefile.in  basic_socket.cpp  basic_socket.h  tcp_socket.cpp  tcp_socket.h  udp_socket.cpp  udp_socket.h
rcsc/param/: Makefile.am  Makefile.in  cmd_line_parser.cpp  cmd_line_parser.h  conf_file_parser.cpp  conf_file_parser.h  param_map.cpp  param_map.h  param_parser.h  rcss_param_parser.cpp  rcss_param_parser.h
rcsc/player/: Makefile.am  Makefile.in  abstract_player_object.cpp  abstract_player_object.h  action_effector.cpp  action_effector.h  audio_sensor.cpp  audio_sensor.h  ball_object.cpp  ball_object.h  body_sensor.cpp  body_sensor.h  debug_client.cpp  debug_client.h  free_message.h  freeform_parser.cpp  freeform_parser.h  fullstate_sensor.cpp  fullstate_sensor.h  intercept_table.cpp  intercept_table.h  interception.cpp  interception.h  localization.cpp  localization.h  object_table.cpp  object_table.h  penalty_kick_state.cpp  penalty_kick_state.h  player_agent.cpp  player_agent.h  player_command.cpp  player_command.h  player_config.cpp  player_config.h  player_intercept.cpp  player_intercept.h  player_object.cpp  player_object.h  player_predicate.h  (+18 more)
rcsc/rcg/: Makefile.am  Makefile.in  factory.cpp  factory.h  handler.h  holder.cpp  holder.h  parser_v1.h  parser_v2.cpp  parser_v2.h  parser_v3.h  parser_v4.cpp  parser_v4.h  reader.h  serializer.cpp  serializer.h  serializer_v1.cpp  serializer_v1.h  serializer_v2.cpp  serializer_v2.h  serializer_v3.cpp  serializer_v3.h  serializer_v4.cpp  serializer_v4.h  types.h  util.cpp  util.h
rcsc/trainer/: Makefile.am  Makefile.in  trainer_agent.cpp  trainer_agent.h  trainer_command.cpp  trainer_command.h  trainer_config.cpp  trainer_config.h
rcsc/util/: Makefile.am  Makefile.in  game_mode.cpp  soccer_math.cpp  timer.cpp
(+12 files in other folders)
